Fix spacing on main

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -59,8 +59,8 @@ h1 {
 }
 
 .input-field i {
-    position: absolute;
-    right: 10px;
+    /* position: absolute;
+    right: 10px; */
     color: #ccc;
     font-size: 20px;
 }
